Se corrigue el codigo.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="TechStore - Tu tienda de tecnología de confianza">
-    <title>TechStore - Tecnología y Electrónica</title>
+    <nav>
+        <p>hola mundo</p>
+    </nav>
 </head>
+<main>
+    <h1>Bienvenidos</h1>
+</main>
 <body>
     
 </body>
