se estructura el codigo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link 
     href="https://fonts.google.com/selection/embed" rel="stylesheet"
     />
+
     <link rel="stylesheet". href="../css/style.css"/>
     <title>Document</title>
 </head>
@@ -28,7 +30,27 @@
             </nav>
     </header>
     <main>
-        
+        <section class="seccion-contacto">
+            <h1> class="titulo de contacto">Contacto </h1>
+          <form
+          class="form"
+  action="https://formspree.io/f/xwprbvel"
+  method="POST"
+>
+<div> class="campo-form" 
+  <label>for= "email">Correo.</label>
+    Your email:
+    <input id="type"="email" name="email"/>
+  </div>
+  <div> class="campo-form
+  <label> for="menssage">menssage:</label>
+    Your message:
+    <textarea id="menssage" name="message"></textarea>
+  </div>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
+        </section>
     </main>
     <footer class="footer">
         <p>Esta pagina se diseño para Vilma</p> 
@@ -41,5 +63,7 @@
             </ul>
         </nav>
     </footer>
+
+    
 </body>
 </html>
