se modifica el codigo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </nav>
     </header>
     <main>
-        
+        <h1> class="Titulo-Home"> Tecno Tech</h1>
+        <p>class= "parrafo-home"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, hic odio dolore aliquid iure corrupti expedita voluptas blanditiis soluta provident et quod! Officiis, beatae ipsam eaque animi sequi voluptas nesciunt similique quis a in non veniam autem iure facilis dolorum ad id ullam laborum. Praesentium reiciendis dolore molestiae dignissimos cumque.
+                   
+        </p>
+        <section> classe="producto-home"</section>
+
+        <h2></h2>Productos de exposicion</h2>
+
+        <div> class="contenedor-tarjetas">
+            <article classe="tarjeta-producto">
+                <img scr="./img/" alt=""
+                <h3>The photo in AI</h3>
+                <p>$20</p>
+            </article>
     </main>
     <footer class="footer">
         <p>Esta pagina se diseño para Vilma</p> 
