--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p>Esta pagina se diseño para Vilma</p> 
+        <p>Esta pagina fue diseñada por Vilma</p> 
         <nav>
             <ul>
                 <li> Instagram </li>
