se agregaron imagenes

--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
 <body>
     <header class="header" >
         <p class="header__logo">
-            <a href="../index.html"> Tienda Tecnologia</a>
-           </p
+            <a href="./index.html"> Tienda Tecnologia</a>
+        </p
 
-        <nav> class="header__nav">
-
+        <nav class="header__nav">
             <ul>
                 <li>
-                    <a href="../index.html">home</a>
+                    <a href="./index.html">home</a>
                 </li>
                 <li>
-                    <a href="./contacto.html">Contactos</a>
+                    <a href="./pages/contacto.html">Contactos</a>
                 </li>
             </ul>
-            </nav>
+        </nav>
     </header>
     <main>
         <h1> class="Titulo-Home"> Tecno Tech</h1>
@@ -37,11 +36,28 @@
         <h2></h2>Productos de exposicion</h2>
 
         <div> class="contenedor-tarjetas">
-            <article classe="tarjeta-producto">
-                <img scr="./img/" alt=""
+            <article class="tarjeta-producto">
+                <img src="./img/animie_foto.png" alt="Foto muñeca">
                 <h3>The photo in AI</h3>
                 <p>$20</p>
             </article>
+
+            <article class="tarjeta-producto">
+                <img src="./img/ciencia_foto.jpg" alt="como hacer ciencia">
+                <h3>The photo in AI</h3>
+                <p>$25</p>
+            </article>
+            <article class="tarjeta-producto">
+                <img src="./img/robot_foto.png" alt="Robot trabajando">
+                <h3>The photo in AI</h3>
+                <p>$30</p>
+            </article>
+            <article class="tarjeta-producto">
+                <img src="./img/tecno_foto.jpg" alt="La vida del futuro">
+                <h3>The photo in AI</h3>
+                <p>$45</p>
+            </article>
+        </div>
     </main>
     <footer class="footer">
         <p>Esta pagina se diseño para Vilma</p> 
