--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
         </nav>
     </header>
     <main>
-        <h1> class="Titulo-Home"> Tecno Tech</h1>
-        <p>class= "parrafo-home"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, hic odio dolore aliquid iure corrupti expedita voluptas blanditiis soluta provident et quod! Officiis, beatae ipsam eaque animi sequi voluptas nesciunt similique quis a in non veniam autem iure facilis dolorum ad id ullam laborum. Praesentium reiciendis dolore molestiae dignissimos cumque.
+        <h1 class="Titulo-Home"> Tecno Tech</h1>
+        <p class="parrafo-home"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, hic odio dolore aliquid iure corrupti expedita voluptas blanditiis soluta provident et quod! Officiis, beatae ipsam eaque animi sequi voluptas nesciunt similique quis a in non veniam autem iure facilis dolorum ad id ullam laborum. Praesentium reiciendis dolore molestiae dignissimos cumque.
                    
-        </p>
-        <section> classe="producto-home"</section>
-
+           <section class="producto-home">
+        <!-- Aquí va el contenido de la sección de productos -->
+    </section>
+        
         <h2></h2>Productos de exposicion</h2>
 
-        <div> class="contenedor-tarjetas">
+        <div class="contenedor-tarjetas">
             <article class="tarjeta-producto">
                 <img src="./img/animie_foto.png" alt="Foto muñeca">
                 <h3>The photo in AI</h3>
@@ -44,17 +45,19 @@
 
             <article class="tarjeta-producto">
                 <img src="./img/ciencia_foto.jpg" alt="como hacer ciencia">
-                <h3>The photo in AI</h3>
+                <h3>La evolucion de ideas</h3>
                 <p>$25</p>
             </article>
+
             <article class="tarjeta-producto">
                 <img src="./img/robot_foto.png" alt="Robot trabajando">
-                <h3>The photo in AI</h3>
+                <h3>AI de mañana</h3>
                 <p>$30</p>
             </article>
+
             <article class="tarjeta-producto">
                 <img src="./img/tecno_foto.jpg" alt="La vida del futuro">
-                <h3>The photo in AI</h3>
+                <h3>La evolucion</h3>
                 <p>$45</p>
             </article>
         </div>
