--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </article>
 
             <article class="tarjeta-producto">
-                <img src="./img/ciencia_foto.jpg" alt="como hacer ciencia">
+                <img src="./img/ciencia_2.png" alt="como hacer ciencia">
                 <h3>La evolucion de ideas</h3>
                 <p>$25</p>
             </article>
@@ -56,7 +56,7 @@
             </article>
 
             <article class="tarjeta-producto">
-                <img src="./img/tecno_foto.jpg" alt="La vida del futuro">
+                <img src="./img/tecnologia_2.png" alt="La vida del futuro">
                 <h3>La evolucion</h3>
                 <p>$45</p>
             </article>
