se agregaron enlaces

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
                 <li>
                     <a href="./pages/contacto.html">Contactos</a>
                 </li>
+                <li>
+                    <a href="./pages/carrito.html" class="carrito-icono">
+                    <span id="contador-carrito">0</span>
+                    </a>
+                </li>
             </ul>
+                    
         </nav>
     </header>
         
@@ -74,5 +80,7 @@
             </ul>
         </nav>
     </footer>
+    <script type="module" src="./js/index.js">
+    </script>
 </body>
 </html>
