se agregaron detalles al py

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </li>
                 <li>
                     <a href="./pages/carrito.html" class="carrito-icono">
-                    <span id="contador-carrito">0</span>
+                   <span id="contador-carrito">0</span>
                     </a>
                 </li>
             </ul>
@@ -43,7 +43,7 @@
         
         <h2>Productos de exposicion</h2>
 
-        <div class="contenedor-tarjetas">
+        <div id="contenedor-tarjetas" class="contenedor-tarjetas">
             <article class="tarjeta-producto">
                 <img src="./img/animie_foto.png" alt="Foto muñeca">
                 <h3>Muñeca AI</h3>
