se agregaron nuevos cambios al py

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </li>
                 <li>
                     <a href="./pages/carrito.html" class="carrito-icono">
-                   <span id="contador-carrito">0</span>
+                   🛒<span id="contador-carrito">0</span>
                     </a>
                 </li>
             </ul>
