se revisa el codigo por errores

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
         <h2>Productos de exposicion</h2>
 
-        <div id="contenedor-tarjetas" class="contenedor-tarjetas">
+        <div id="contenedor-productos" class="contenedor-tarjetas">
             <!-- Las tarjetas de productos se encontraban aqui -->
         </div>
     </main>
