se creo nuevas carpetas, y se renderizo la tarjetas

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -32,12 +32,23 @@
 <main>
     <h1>Carrito de compras</h1>
 
-    <section id="contador carrito"></section>
+    <section id="contenedor - carrito"></section>
 
     <div class="acciones-carrito" id="acciones-carrito"></div>
     <section id="resumen-carrito"></section>
 
 </main>
+<footer class="footer">
+    <p>Esta pagina la diseño Vilma</p>
+    <p>2025 &copy; Tienda Tecnología-Py Talento</p>
+    <nav>
+        <li>Instagram</li>
+        <li>Facebook</li>
+        <li>x</li>
+    </ul>
+    
+    </nav>
+</footer>
 
 <script type="module" src="../js/carrito.js"></script>
 </body>
